--- a/frontend/package.json
+++ b/frontend/package.json
@@ -3,8 +3,7 @@
   "version": "1.0.0",
   "private": true,
   "scripts": {
-    "serve": "vue-cli-service serve",
-    "build": "vue-cli-service build"
+    "serve": "vue-cli-service serve"   
   },
   "dependencies": {
     "axios": "^1.6.7",
